--- a/src/components/Skills/index.css
+++ b/src/components/Skills/index.css
@@ -6,6 +6,7 @@
   min-height: 90vh;
   background-color: #0a2442;
   padding-top: 40px;
+  padding-bottom: 20px;
   font-family: 'Roboto';
   color: #ffffff;
 }
