--- a/src/components/Certifications/index.css
+++ b/src/components/Certifications/index.css
@@ -16,15 +16,33 @@
 .cert-h1 {
   font-family: 'Roboto';
   color: #ffffff;
-  font-size: 40px;
+  font-size: 35px;
+  font-weight: 500;
+  text-decoration: underline;
+  margin-bottom: 0;
+}
+
+.cert-h1-db {
+  font-family: 'Roboto';
+  color: #ffffff;
+  font-size: 35px;
   font-weight: 500;
   margin-bottom: 0;
+  text-decoration: underline;
+  margin-top: 80px;
+}
+
+.cert-hr-line-dashed {
+  width: 1470px;
+  border: 0px;
+  border-top: 2px dashed #ffffff;
+  margin-top: 50px;
 }
 
 .cert-hr-line {
   width: 1470px;
   margin-top: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .cert-hading-div {
@@ -32,6 +50,7 @@
   align-items: center;
   justify-content: space-between;
   width: 1460px;
+  margin-top: 40px;
 }
 
 .cert-link-element {
@@ -84,6 +103,11 @@
     margin-bottom: 10px;
   }
 
+  .cert-hr-line-dashed {
+    width: 330px;
+    margin-bottom: 10px;
+  }
+
   .cert-hading-div {
     width: 360px;
     justify-content: space-around;
@@ -93,6 +117,10 @@
   .cert-name {
     font-size: 13px;
     width: 100px;
+  }
+
+  .cert-h1-db {
+    font-size: 20px;
   }
 
   .key-points-ul {
